  - removed unused functionality to load a subset of lines from a file (messju)
  - fix is_secure() should only check if a file is_readable, not if
    the directory where it is in is readable (sagi, messju)
  - fix problem displaying debug console when $default_resource_type
    is not "file:" (c960657, Monte)
  - fix permission handling with security and config_load (messju)
  - removed '.' from the list of default template locations in
    _parse_resource_name() (messju)
  - fix avoid warning with template_exists() on an absolute paths (messju)
  - fix parameters passed to resource's secure()-function (messju)
  - fix handling of integer values like width and delay im
    smarty_function_popup() (messju)

Version 2.6.2 (Feb 17, 2004)
----------------------------

  - fix allow empty years, months and days in html_select_date's
    time-attribute (messju)
  - fix YES and NO should not be booleanized inside triple-quotes in a
    config-file (messju)
  - fix accidently slurped line following a triple-quoted value in a
    config-file (messju)
  - change default for use_sub_dirs to false (messju)
  - fix quoting of values in smarty_function_popup() (messju)
  - fix handling of hidden sections in Config_File (messju)
  - add handling of resources for {config_load} (messju)
  - fix bug when using arrays with tr_attr and td_attr in {html_table} (messju)
  - add unit testing to cvs core (Monte)

Version 2.6.1 (Jan 16, 2004)
----------------------------

  - rename $smarty->tpl_error_reporting to $smarty->error_reporting
    (messju)
  - fix interpretation of $smarty->security in {html_image} (messju)
  - add caching of requested paths to _assemble_plugin_filepath() (messju)
  - fix handling of comments inside {php}- and {literal}-blocks (messju)
  - fix bug handling triple-quotes in config-files (BRDude, messju)
  - change default of request_use_auto_globals to true - $_SERVER is
    now preferred over $HTTP_SERVER_VARS (messju)